package seedu.duke;

//@@author pragyan01
/**
 * Abstract parent class tracker.
 *
 * @author pragyan01
 */
public abstract class Tracker {
}
